from enum import Enum


class Visibility(Enum):
    DAYLIGHT = 'daylight'
    ECLIPSED = 'eclipsed'
